a11y color contrast fixes

--- a/src/colors/_colors.scss
+++ b/src/colors/_colors.scss
@@ -12,6 +12,8 @@ $text-color: #05182A;
 
 $background-color: #f5f5f5;
 
+$link-color: #0047c8;
+
 // Colors
 //
 // Styleguide Colors
