--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,3 +9,5 @@
 @import "components/components";
 @import "tables/tables";
 @import "forms/forms";
+
+#__SVG_SPRITE_NODE__ { display: none; }
