--- a/src/typography/_typography.scss
+++ b/src/typography/_typography.scss
@@ -109,7 +109,7 @@ b,
 strong { font-weight: $bold; }
 
 a {
-    color: $primary-color;
+    color: $link-color;
     text-decoration: none;
     cursor: pointer;
 }
